# dirt

./: Dockerfile  LICENSE  README.md  setup.py
csrc/: CMakeLists.txt  gl_common.h  gl_dispatcher.h  hwc.h  rasterise_egl.cpp  rasterise_egl.cu  rasterise_grad_common.h  rasterise_grad_egl.cpp  rasterise_grad_egl.cu  shaders.cpp  shaders.h  tf_cuda_utils.h
dirt/: __init__.py  lighting.py  matrices.py  projection.py  rasterise_ops.py
samples/: deferred.py  simple.py  textured.py
tests/: deferred_grad_test.py  lighting_tests.py  multi_gpu_test.py  rasterise_tests.py  square_test.py
